GeminiDocument List properties are now all mutable DCDEV-87